syntax = "proto3";

package fund;

message global_vars {
  uint64 fee = 1;
  uint32 total_projects = 2;
  repeated uint64 expiration_time = 3;
}

message submit_project_arguments {
  bytes creator = 1;
  bytes beneficiary = 2;
  string title = 3;
  string description = 4;
  uint64 monthly_payment = 5;
  uint64 starting_date = 6;
  uint64 ending_date = 7;
  uint64 fee = 8;
}

message submit_project_result {
}

enum project_status {
  upcoming = 0;
  active = 1;
  past = 2;
}

message project {
  uint32 id = 1;
  bytes creator = 2;
  bytes beneficiary = 3;
  string title = 4;
  string description = 5;
  uint64 monthly_payment = 6;
  uint64 starting_date = 7;
  uint64 ending_date = 8;
  project_status status = 9;
  uint64 total_votes = 10;
  repeated uint64 votes = 11;
}

message existence {
}

message vote_info {
  uint64 expiration = 1;
  uint32 weight = 2;
}

message set_votes_koinos_fund_arguments {
  bytes account = 1;
  bool votes_koinos_fund = 2;
}

message update_vote_arguments {
  bytes voter = 1;
  uint32 project_id = 2;
  uint32 weight = 3;
}

message update_vote_result {
}
